// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tab/> renders a button 1`] = `
<span
  className="tab-0-2-1"
>
  <TrackingBoundary
    name="Default"
  >
    <ButtonOrLink
      aria-selected={false}
      className="tabButton-0-2-6"
      onClick={[Function]}
      role="tab"
    >
      Tab
    </ButtonOrLink>
  </TrackingBoundary>
</span>
`;

exports[`<Tab/> renders disabled 1`] = `
<span
  className="tab-0-2-1 tab_disabled-0-2-5"
>
  <TrackingBoundary
    name="Default"
  >
    <ButtonOrLink
      aria-selected={false}
      className="tabButton-0-2-6"
      disabled={true}
      role="tab"
    >
      Tab
    </ButtonOrLink>
  </TrackingBoundary>
</span>
`;

exports[`<Tab/> renders selected 1`] = `
<span
  className="tab-0-2-1 tab_selected-0-2-3"
>
  <TrackingBoundary
    name="Default"
  >
    <ButtonOrLink
      aria-selected={true}
      className="tabButton-0-2-6"
      onClick={[Function]}
      role="tab"
    >
      Tab
    </ButtonOrLink>
  </TrackingBoundary>
</span>
`;

exports[`<Tab/> renders stretched 1`] = `
<span
  className="tab-0-2-1 tab_stretched-0-2-4"
>
  <TrackingBoundary
    name="Default"
  >
    <ButtonOrLink
      aria-selected={false}
      className="tabButton-0-2-6"
      onClick={[Function]}
      role="tab"
    >
      Tab
    </ButtonOrLink>
  </TrackingBoundary>
</span>
`;
